added views rows

--- a/patternlab/source/_patterns/02-organisms/01-content-types/community-detail@inprogress.mustache
+++ b/patternlab/source/_patterns/02-organisms/01-content-types/community-detail@inprogress.mustache
@@ -27,31 +27,35 @@
         <h2 class="pane__title">Highlights</h2> 
         <div class="pane__content">
 
-          <div class="view view--highlights">
+          <div class="view view--card-view">
 
-            <article class="card card__background">
-              <div class="card__content">
-                <h2 class="card__type">Toolkit</h2>
-                <h3 class="card__primary-title"><a href="{{ url }}">{{ title }}</a></h3>
-                <div class="card__author">
-                  <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
-                  <div class="card__author-name">Buffy Summers</div>
-                  <div class="card__author-date">03/15/2015</div>    
+            <div class="views-row">
+              <article class="card card__background">
+                <div class="card__content">
+                  <h2 class="card__type">Toolkit</h2>
+                  <h3 class="card__primary-title"><a href="{{ url }}">{{ title }}</a></h3>
+                  <div class="card__author">
+                    <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
+                    <div class="card__author-name">Buffy Summers</div>
+                    <div class="card__author-date">03/15/2015</div>    
+                  </div>
                 </div>
-              </div>
-            </article>
+              </article>
+            </div>
 
-             <article class="card card__background">
-              <div class="card__content">
-                <h2 class="card__type">Toolkit</h2>
-                <h3 class="card__primary-title"><a href="{{ url }}">{{ title }}</a></h3>
-                <div class="card__author">
-                  <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
-                  <div class="card__author-name">Buffy Summers</div>
-                  <div class="card__author-date">03/15/2015</div>    
+            <div class="views-row">
+              <article class="card card__background">
+                <div class="card__content">
+                  <h2 class="card__type">Toolkit</h2>
+                  <h3 class="card__primary-title"><a href="{{ url }}">{{ title }}</a></h3>
+                  <div class="card__author">
+                    <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
+                    <div class="card__author-name">Buffy Summers</div>
+                    <div class="card__author-date">03/15/2015</div>    
+                  </div>
                 </div>
-              </div>
-            </article>
+              </article>
+            </div>
     
           </div>
         </div>
