more megamenu styling

--- a/patternlab/source/sass/partials/module_tweaks/_field.scss
+++ b/patternlab/source/sass/partials/module_tweaks/_field.scss
@@ -1,3 +1,9 @@
 .tabledrag-toggle-weight-wrapper {
   display: none; // hide weight switcher
 }
+
+.field-multiple-table {
+  .form-item {
+    margin: 0;
+  }
+}
