--- a/patternlab/source/sass/partials/module_tweaks/_term-reference-tree.scss
+++ b/patternlab/source/sass/partials/module_tweaks/_term-reference-tree.scss
@@ -1,6 +1,8 @@
 .term-reference-tree-level {
+  list-style: none !important;
   li {
     .pane__content & { // undo bullet from _html-elements
+      list-style: none !important;
       &:before {
         display: none;
       }
