--- a/patternlab/public/css/no-mq.css
+++ b/patternlab/public/css/no-mq.css
@@ -1632,40 +1632,32 @@ input.throbbing {
 
 /* line 44, ../sass/partials/components/_card.scss */
 .card__background {
-  background-image: url(../images/bg/icon-innovations-white-185x254.png);
+  background-image: url(../images/bg/icon-innovations-white-101x254.png);
   background-repeat: no-repeat;
-  background-position: 225px 0px;
-  float: left;
-  width: 45%;
-  margin: 0 60px 35px 0;
+  background-position: 100%;
 }
-/* line 51, ../sass/partials/components/_card.scss */
-.card__background:nth-child(even) {
-  float: right;
-  margin: 0;
-}
-/* line 55, ../sass/partials/components/_card.scss */
+/* line 48, ../sass/partials/components/_card.scss */
 .card__background .card__primary-title {
   border-bottom: 1px solid #f0f0f0;
   padding: 0 0 3em 0;
 }
-/* line 59, ../sass/partials/components/_card.scss */
+/* line 52, ../sass/partials/components/_card.scss */
 .card__background .card__content {
   padding: 16px 16px 10px 16px;
 }
 
-/* line 64, ../sass/partials/components/_card.scss */
+/* line 57, ../sass/partials/components/_card.scss */
 .card__author {
   font-size: 0.75em;
   line-height: 1.3;
   overflow: hidden;
 }
-/* line 68, ../sass/partials/components/_card.scss */
+/* line 61, ../sass/partials/components/_card.scss */
 .card__author .card__author-image {
   float: left;
   margin: 0 0.5em 0 0;
 }
-/* line 71, ../sass/partials/components/_card.scss */
+/* line 64, ../sass/partials/components/_card.scss */
 .card__author .card__author-image img {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -1674,35 +1666,35 @@ input.throbbing {
   border-radius: 50%;
   border: 1px solid #cecfcb;
 }
-/* line 76, ../sass/partials/components/_card.scss */
+/* line 69, ../sass/partials/components/_card.scss */
 .card__author .card__author-name {
   font-weight: bold;
 }
 
-/* line 84, ../sass/partials/components/_card.scss */
+/* line 77, ../sass/partials/components/_card.scss */
 .card__number {
   font-size: 1.3125em;
 }
 
-/* line 88, ../sass/partials/components/_card.scss */
+/* line 81, ../sass/partials/components/_card.scss */
 .card__due-date {
   font-size: 0.875em;
 }
 
-/* line 92, ../sass/partials/components/_card.scss */
+/* line 85, ../sass/partials/components/_card.scss */
 .card__list {
   font-size: 0.75em;
   line-height: 1.3;
   margin: 1em 0;
 }
 
-/* line 98, ../sass/partials/components/_card.scss */
+/* line 91, ../sass/partials/components/_card.scss */
 .card__list-label {
   display: inline;
   font-weight: bold;
 }
 
-/* line 103, ../sass/partials/components/_card.scss */
+/* line 96, ../sass/partials/components/_card.scss */
 .card__button {
   bottom: 10px;
   left: 0;
@@ -1712,7 +1704,7 @@ input.throbbing {
   width: 100%;
 }
 
-/* line 117, ../sass/partials/components/_card.scss */
+/* line 110, ../sass/partials/components/_card.scss */
 .card__counts > .view .has-icon--comment:before, .card__counts > .view .has-icon--camera:before, .card__counts > .view .has-icon--favorite:before, .card__counts > .view .has-icon--member:before, .card__counts > .view .has-icon--organization:before, .card__counts > .view .has-icon--evidence:before, .card__counts > .view .has-icon--innovation:before, .view--at-a-glance .has-icon--amount:before, .view--at-a-glance .has-icon--comment:before, .view--at-a-glance .has-icon--camera:before, .view--at-a-glance .has-icon--favorite:before, .view--at-a-glance .has-icon--member:before, .view--at-a-glance .has-icon--organization:before, .view--at-a-glance .has-icon--evidence:before, .view--at-a-glance .has-icon--innovation:before {
   content: "";
   display: block;
@@ -1722,7 +1714,7 @@ input.throbbing {
   left: 50%;
 }
 
-/* line 126, ../sass/partials/components/_card.scss */
+/* line 119, ../sass/partials/components/_card.scss */
 .card__counts {
   bottom: 10px;
   left: 0;
@@ -1732,7 +1724,7 @@ input.throbbing {
   text-align: center;
   width: 100%;
 }
-/* line 134, ../sass/partials/components/_card.scss */
+/* line 127, ../sass/partials/components/_card.scss */
 .card__counts > .view {
   display: inline-block;
   font-size: 0.75em;
@@ -1742,7 +1734,7 @@ input.throbbing {
   padding: 0 6%;
   text-align: center;
 }
-/* line 143, ../sass/partials/components/_card.scss */
+/* line 136, ../sass/partials/components/_card.scss */
 .card__counts > .view .has-icon--comment:before {
   height: 17px;
   overflow: hidden;
@@ -1759,7 +1751,7 @@ input.throbbing {
   height: 150%;
   width: 0;
 }
-/* line 151, ../sass/partials/components/_card.scss */
+/* line 144, ../sass/partials/components/_card.scss */
 .card__counts > .view .has-icon--camera:before {
   height: 17px;
   overflow: hidden;
@@ -1776,7 +1768,7 @@ input.throbbing {
   height: 150%;
   width: 0;
 }
-/* line 159, ../sass/partials/components/_card.scss */
+/* line 152, ../sass/partials/components/_card.scss */
 .card__counts > .view .has-icon--favorite:before {
   height: 17px;
   overflow: hidden;
@@ -1793,7 +1785,7 @@ input.throbbing {
   height: 150%;
   width: 0;
 }
-/* line 167, ../sass/partials/components/_card.scss */
+/* line 160, ../sass/partials/components/_card.scss */
 .card__counts > .view .has-icon--member:before {
   height: 17px;
   overflow: hidden;
@@ -1810,7 +1802,7 @@ input.throbbing {
   height: 150%;
   width: 0;
 }
-/* line 175, ../sass/partials/components/_card.scss */
+/* line 168, ../sass/partials/components/_card.scss */
 .card__counts > .view .has-icon--organization:before {
   height: 17px;
   overflow: hidden;
@@ -1827,7 +1819,7 @@ input.throbbing {
   height: 150%;
   width: 0;
 }
-/* line 183, ../sass/partials/components/_card.scss */
+/* line 176, ../sass/partials/components/_card.scss */
 .card__counts > .view .has-icon--evidence:before {
   height: 17px;
   overflow: hidden;
@@ -1844,7 +1836,7 @@ input.throbbing {
   height: 150%;
   width: 0;
 }
-/* line 191, ../sass/partials/components/_card.scss */
+/* line 184, ../sass/partials/components/_card.scss */
 .card__counts > .view .has-icon--innovation:before {
   height: 20px;
   overflow: hidden;
