--- a/patternlab/public/css/overrides/admin_menu.css
+++ b/patternlab/public/css/overrides/admin_menu.css
@@ -2,7 +2,7 @@
 #admin-menu {
   background: #000;
   color: #fff;
-  font-size: 0.875em;
+  font-size: 0.75em;
   left: 0;
   line-height: 1.75;
   padding: 0.5em 1em;
@@ -58,25 +58,24 @@
   border: 2px solid transparent;
   color: #fff;
   display: block;
-  font-weight: normal;
   margin: 0;
   outline: 0;
   padding: 0 0.75em;
   text-decoration: none;
 }
-/* line 53, ../../sass/overrides/admin_menu.scss */
-#admin-menu-icon > li > a:hover, #admin-menu-icon > li > a.active,
+/* line 52, ../../sass/overrides/admin_menu.scss */
+#admin-menu-icon > li > a:hover, #admin-menu-icon > li > a.is-active,
 #admin-menu-menu > li > a:hover,
-#admin-menu-menu > li > a.active,
+#admin-menu-menu > li > a.is-active,
 #admin-menu-account > li > a:hover,
-#admin-menu-account > li > a.active,
+#admin-menu-account > li > a.is-active,
 #admin-menu-users > li > a:hover,
-#admin-menu-users > li > a.active,
+#admin-menu-users > li > a.is-active,
 #admin-menu-search > li > a:hover,
-#admin-menu-search > li > a.active {
+#admin-menu-search > li > a.is-active {
   background-color: #555;
 }
-/* line 57, ../../sass/overrides/admin_menu.scss */
+/* line 56, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon > li > a:focus,
 #admin-menu-menu > li > a:focus,
 #admin-menu-account > li > a:focus,
@@ -85,7 +84,7 @@
   background-color: #555;
   border-color: #ccc;
 }
-/* line 64, ../../sass/overrides/admin_menu.scss */
+/* line 63, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown,
 #admin-menu-menu .dropdown,
 #admin-menu-account .dropdown,
@@ -100,7 +99,7 @@
   width: 14em;
   z-index: 2;
 }
-/* line 74, ../../sass/overrides/admin_menu.scss */
+/* line 73, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown li + li,
 #admin-menu-menu .dropdown li + li,
 #admin-menu-account .dropdown li + li,
@@ -108,7 +107,7 @@
 #admin-menu-search .dropdown li + li {
   border-top: 1px solid #555;
 }
-/* line 79, ../../sass/overrides/admin_menu.scss */
+/* line 78, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown a,
 #admin-menu-icon .dropdown span,
 #admin-menu-menu .dropdown a,
@@ -121,12 +120,11 @@
 #admin-menu-search .dropdown span {
   color: #fff;
   display: block;
-  font-weight: normal;
   margin: 0;
   padding: 0 0.5em;
   text-decoration: none;
 }
-/* line 88, ../../sass/overrides/admin_menu.scss */
+/* line 86, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown a:hover, #admin-menu-icon .dropdown a:focus,
 #admin-menu-icon .dropdown span:hover,
 #admin-menu-icon .dropdown span:focus,
@@ -148,7 +146,7 @@
 #admin-menu-search .dropdown span:focus {
   background-color: #555;
 }
-/* line 93, ../../sass/overrides/admin_menu.scss */
+/* line 91, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown .dropdown,
 #admin-menu-menu .dropdown .dropdown,
 #admin-menu-account .dropdown .dropdown,
@@ -157,7 +155,7 @@
   margin: -1.75em 0 0 14em;
   position: absolute;
 }
-/* line 97, ../../sass/overrides/admin_menu.scss */
+/* line 95, ../../sass/overrides/admin_menu.scss */
 [dir="rtl"] #admin-menu-icon .dropdown .dropdown, [dir="rtl"]
 #admin-menu-menu .dropdown .dropdown, [dir="rtl"]
 #admin-menu-account .dropdown .dropdown, [dir="rtl"]
@@ -165,7 +163,7 @@
 #admin-menu-search .dropdown .dropdown {
   margin: -1.75em 14em 0 0;
 }
-/* line 103, ../../sass/overrides/admin_menu.scss */
+/* line 101, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown .expandable > a,
 #admin-menu-icon .dropdown .expandable > span,
 #admin-menu-menu .dropdown .expandable > a,
@@ -178,7 +176,7 @@
 #admin-menu-search .dropdown .expandable > span {
   position: relative;
 }
-/* line 106, ../../sass/overrides/admin_menu.scss */
+/* line 104, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown .expandable > a:after,
 #admin-menu-icon .dropdown .expandable > span:after,
 #admin-menu-menu .dropdown .expandable > a:after,
@@ -194,7 +192,7 @@
   right: 0.5em;
   top: 0;
 }
-/* line 112, ../../sass/overrides/admin_menu.scss */
+/* line 110, ../../sass/overrides/admin_menu.scss */
 [dir="rtl"] #admin-menu-icon .dropdown .expandable > a:after, [dir="rtl"]
 #admin-menu-icon .dropdown .expandable > span:after, [dir="rtl"]
 #admin-menu-menu .dropdown .expandable > a:after, [dir="rtl"]
@@ -209,42 +207,42 @@
   right: auto;
 }
 
-/* line 121, ../../sass/overrides/admin_menu.scss */
+/* line 119, ../../sass/overrides/admin_menu.scss */
 #admin-menu-account {
   float: right;
 }
-/* line 124, ../../sass/overrides/admin_menu.scss */
+/* line 122, ../../sass/overrides/admin_menu.scss */
 [dir="rtl"] #admin-menu-account {
   float: left;
 }
 
-/* line 129, ../../sass/overrides/admin_menu.scss */
+/* line 127, ../../sass/overrides/admin_menu.scss */
 #admin-menu-search {
   float: right;
 }
-/* line 132, ../../sass/overrides/admin_menu.scss */
+/* line 130, ../../sass/overrides/admin_menu.scss */
 [dir="rtl"] #admin-menu-search {
   float: left;
 }
-/* line 136, ../../sass/overrides/admin_menu.scss */
+/* line 134, ../../sass/overrides/admin_menu.scss */
 #admin-menu-search .form-item {
   margin: 0.16667em 1em 0 0;
 }
-/* line 139, ../../sass/overrides/admin_menu.scss */
+/* line 137, ../../sass/overrides/admin_menu.scss */
 [dir="rtl"] #admin-menu-search .form-item {
   margin: 0.16667em 0 0 1em;
 }
-/* line 143, ../../sass/overrides/admin_menu.scss */
+/* line 141, ../../sass/overrides/admin_menu.scss */
 #admin-menu-search .form-item input {
   max-width: 20em;
 }
 
-/* line 149, ../../sass/overrides/admin_menu.scss */
+/* line 147, ../../sass/overrides/admin_menu.scss */
 img.admin-menu-icon {
   vertical-align: middle;
 }
 
-/* line 153, ../../sass/overrides/admin_menu.scss */
+/* line 151, ../../sass/overrides/admin_menu.scss */
 body.admin-menu {
   margin-top: 0.25em;
   padding-top: 2.0625em;
