--- a/public/sites/all/themes/gesso/css/no-mq.css
+++ b/public/sites/all/themes/gesso/css/no-mq.css
@@ -1,4 +1,4 @@
-/* line 65, ../../../../../../../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/singularitygs-1.1.2/stylesheets/singularitygs/helpers/_clearfix.scss */
+/* line 65, ../../../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/singularitygs-1.1.2/stylesheets/singularitygs/helpers/_clearfix.scss */
 .clearfix:after, .layout-grid__row:after, .field--funding-deadline:after, .pane--homepage-views-personas-pane .pane__content .view--homepage-views:after, .pane--landing-intro:after, .quicktabs-tabs.quicktabs-style-nostyle:after, .region-footer:after, .view__header:after, .view--homepage-cardflip:after {
   content: "";
   display: table;
@@ -242,7 +242,7 @@
   width: 22px;
 }
 
-/* line 15, ../sass/partials/base/_normalize.scss */
+/* line 17, ../sass/partials/base/_normalize.scss */
 article,
 aside,
 details,
@@ -252,105 +252,41 @@ footer,
 header,
 hgroup,
 main,
+menu,
 nav,
 section,
 summary {
   display: block;
 }
 
-/* line 21, ../sass/partials/base/_normalize.scss */
+/* line 24, ../sass/partials/base/_normalize.scss */
 audio,
 canvas,
+progress,
 video {
   display: inline-block;
+  vertical-align: baseline;
 }
 
-/* line 29, ../sass/partials/base/_normalize.scss */
+/* line 34, ../sass/partials/base/_normalize.scss */
 audio:not([controls]) {
   display: none;
   height: 0;
 }
 
-/* line 35, ../sass/partials/base/_normalize.scss */
+/* line 40, ../sass/partials/base/_normalize.scss */
 [hidden],
 template {
   display: none;
 }
 
-/* line 39, ../sass/partials/base/_normalize.scss */
-html {
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-/* line 54, ../sass/partials/base/_normalize.scss */
-body {
-  margin: 0;
-  padding: 0;
-}
-
-/* line 59, ../sass/partials/base/_normalize.scss */
-a {
-  background: transparent;
-}
-
-/* line 63, ../sass/partials/base/_normalize.scss */
-a:focus {
-  outline: thin dotted;
-}
-
-/* line 68, ../sass/partials/base/_normalize.scss */
-a:active,
-a:hover {
-  outline: 0;
-}
-
-/* line 72, ../sass/partials/base/_normalize.scss */
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-
-/* line 77, ../sass/partials/base/_normalize.scss */
+/* line 55, ../sass/partials/base/_normalize.scss */
 b,
 strong {
   font-weight: bold;
 }
 
-/* line 81, ../sass/partials/base/_normalize.scss */
-dfn {
-  font-style: italic;
-}
-
-/* line 85, ../sass/partials/base/_normalize.scss */
-hr {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
-
-/* line 95, ../sass/partials/base/_normalize.scss */
-code,
-kbd,
-pre,
-samp,
-tt,
-var {
-  font-family: Consolas, "Lucida Console", "Liberation Mono", "Courier New", monospace, sans-serif;
-  font-size: 1em;
-}
-
-/* line 103, ../sass/partials/base/_normalize.scss */
-pre {
-  white-space: pre-wrap;
-}
-
-/* line 114, ../sass/partials/base/_normalize.scss */
-q {
-  quotes: "\201C" "\201D" "\2018" "\2019";
-}
-
-/* line 119, ../sass/partials/base/_normalize.scss */
+/* line 60, ../sass/partials/base/_normalize.scss */
 sub,
 sup {
   font-size: 75%;
@@ -359,62 +295,40 @@ sup {
   vertical-align: baseline;
 }
 
-/* line 126, ../sass/partials/base/_normalize.scss */
-sup {
-  top: -0.5em;
-}
-
-/* line 130, ../sass/partials/base/_normalize.scss */
-sub {
-  bottom: -0.25em;
-}
-
-/* line 143, ../sass/partials/base/_normalize.scss */
-img {
-  border: 0;
-  width: auto;
-}
-
-/* line 157, ../sass/partials/base/_normalize.scss */
+/* line 67, ../sass/partials/base/_normalize.scss */
 svg:not(:root) {
   overflow: hidden;
 }
 
-/* line 161, ../sass/partials/base/_normalize.scss */
-figure {
-  margin: 0;
+/* line 74, ../sass/partials/base/_normalize.scss */
+code,
+kbd,
+pre,
+samp {
+  font-family: Consolas, "Lucida Console", "Liberation Mono", "Courier New", monospace, sans-serif;
+  font-size: 1em;
 }
 
-/* line 172, ../sass/partials/base/_normalize.scss */
-legend {
-  border: 0;
-  padding: 0;
-}
-
-/* line 180, ../sass/partials/base/_normalize.scss */
+/* line 87, ../sass/partials/base/_normalize.scss */
 button,
 input,
+optgroup,
 select,
 textarea {
+  color: inherit;
   font-family: inherit;
   font-size: 100%;
   margin: 0;
   max-width: 100%;
 }
 
-/* line 193, ../sass/partials/base/_normalize.scss */
-button,
-input {
-  line-height: normal;
-}
-
-/* line 198, ../sass/partials/base/_normalize.scss */
+/* line 101, ../sass/partials/base/_normalize.scss */
 button,
 select {
   text-transform: none;
 }
 
-/* line 205, ../sass/partials/base/_normalize.scss */
+/* line 108, ../sass/partials/base/_normalize.scss */
 button,
 html input[type="button"],
 input[type="reset"],
@@ -423,13 +337,20 @@ input[type="submit"] {
   cursor: pointer;
 }
 
-/* line 215, ../sass/partials/base/_normalize.scss */
+/* line 114, ../sass/partials/base/_normalize.scss */
 button[disabled],
 html input[disabled] {
   cursor: default;
 }
 
-/* line 220, ../sass/partials/base/_normalize.scss */
+/* line 119, ../sass/partials/base/_normalize.scss */
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+/* line 125, ../sass/partials/base/_normalize.scss */
 input[type="checkbox"],
 input[type="radio"] {
   -webkit-box-sizing: border-box;
@@ -438,7 +359,13 @@ input[type="radio"] {
   padding: 0;
 }
 
-/* line 230, ../sass/partials/base/_normalize.scss */
+/* line 136, ../sass/partials/base/_normalize.scss */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/* line 140, ../sass/partials/base/_normalize.scss */
 input[type="search"] {
   -webkit-appearance: textfield;
   -webkit-box-sizing: content-box;
@@ -446,32 +373,13 @@ input[type="search"] {
   box-sizing: content-box;
 }
 
-/* line 236, ../sass/partials/base/_normalize.scss */
+/* line 146, ../sass/partials/base/_normalize.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-/* line 241, ../sass/partials/base/_normalize.scss */
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-/* line 246, ../sass/partials/base/_normalize.scss */
-textarea {
-  overflow: auto;
-  vertical-align: top;
-}
-
-/* line 251, ../sass/partials/base/_normalize.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* line 264, ../sass/partials/base/_normalize.scss */
+/* line 158, ../sass/partials/base/_normalize.scss */
 abbr,
 blockquote,
 code,
@@ -485,7 +393,7 @@ var {
   hyphens: none;
 }
 
-/* line 271, ../sass/partials/base/_normalize.scss */
+/* line 165, ../sass/partials/base/_normalize.scss */
 img,
 input,
 textarea,
@@ -494,21 +402,21 @@ video {
   max-width: 100%;
 }
 
-/* line 278, ../sass/partials/base/_normalize.scss */
+/* line 172, ../sass/partials/base/_normalize.scss */
 embed,
 iframe,
 object {
   max-width: 100%;
 }
 
-/* line 282, ../sass/partials/base/_normalize.scss */
+/* line 176, ../sass/partials/base/_normalize.scss */
 ::-moz-selection {
   background: blue;
   color: white;
   text-shadow: none;
 }
 
-/* line 288, ../sass/partials/base/_normalize.scss */
+/* line 182, ../sass/partials/base/_normalize.scss */
 ::selection {
   background: blue;
   color: white;
@@ -542,54 +450,80 @@ object {
 
 /* line 26, ../sass/partials/base/_html-elements.scss */
 a {
+  background-color: transparent;
   color: #dc5606;
   font-weight: bold;
   outline-offset: 0.125em;
   text-decoration: none;
 }
-/* line 34, ../sass/partials/base/_html-elements.scss */
+/* line 35, ../sass/partials/base/_html-elements.scss */
+a:active, a:hover {
+  outline: 0;
+}
+/* line 40, ../sass/partials/base/_html-elements.scss */
 a:hover, a:focus {
   color: #aa4305;
   text-decoration: underline;
 }
 
-/* line 40, ../sass/partials/base/_html-elements.scss */
+/* line 46, ../sass/partials/base/_html-elements.scss */
 abbr {
   font-variant: small-caps;
   text-transform: lowercase;
 }
-/* line 43, ../sass/partials/base/_html-elements.scss */
+/* line 49, ../sass/partials/base/_html-elements.scss */
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+/* line 53, ../sass/partials/base/_html-elements.scss */
 abbr:hover {
   cursor: help;
 }
 
-/* line 58, ../sass/partials/base/_html-elements.scss */
+/* line 68, ../sass/partials/base/_html-elements.scss */
 blockquote {
   margin: 0 1.5em 1.625em;
 }
 
-/* line 62, ../sass/partials/base/_html-elements.scss */
+/* line 72, ../sass/partials/base/_html-elements.scss */
 body {
   background-color: white;
   color: #565a5c;
+  margin: 0;
+  padding: 0;
   word-wrap: break-word;
 }
-/* line 64, ../sass/partials/base/_html-elements.scss */
+/* line 74, ../sass/partials/base/_html-elements.scss */
 body.front {
   background-color: #f8f8f8;
 }
 
-/* line 89, ../sass/partials/base/_html-elements.scss */
+/* line 85, ../sass/partials/base/_html-elements.scss */
+button {
+  overflow: visible;
+}
+
+/* line 103, ../sass/partials/base/_html-elements.scss */
 dd {
   margin-bottom: 1.625em;
 }
 
-/* line 99, ../sass/partials/base/_html-elements.scss */
+/* line 111, ../sass/partials/base/_html-elements.scss */
+dfn {
+  font-style: italic;
+}
+
+/* line 115, ../sass/partials/base/_html-elements.scss */
 dl {
   margin: 0 0 1.625em;
 }
 
-/* line 119, ../sass/partials/base/_html-elements.scss */
+/* line 129, ../sass/partials/base/_html-elements.scss */
+figure {
+  margin: 0 0 1.625em;
+}
+
+/* line 142, ../sass/partials/base/_html-elements.scss */
 h1, h2, h3, h4, h5, h6 {
   color: #565a5c;
   font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -600,14 +534,14 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility;
 }
 
-/* line 127, ../sass/partials/base/_html-elements.scss */
+/* line 150, ../sass/partials/base/_html-elements.scss */
 h1 {
   font-size: 2em;
   font-weight: normal;
   margin: 0 0 0.8125em;
 }
 
-/* line 134, ../sass/partials/base/_html-elements.scss */
+/* line 157, ../sass/partials/base/_html-elements.scss */
 h2 {
   color: #003359;
   font-size: 1.5em;
@@ -615,7 +549,7 @@ h2 {
   margin: 0 0 1.08333em;
 }
 
-/* line 142, ../sass/partials/base/_html-elements.scss */
+/* line 165, ../sass/partials/base/_html-elements.scss */
 h3 {
   color: #7090b7;
   font-size: 1.3125em;
@@ -623,32 +557,36 @@ h3 {
   margin: 0 0 1.2381em;
 }
 
-/* line 150, ../sass/partials/base/_html-elements.scss */
+/* line 173, ../sass/partials/base/_html-elements.scss */
 h4 {
   font-size: 1.125em;
   margin: 0 0 1.44444em;
 }
 
-/* line 156, ../sass/partials/base/_html-elements.scss */
+/* line 179, ../sass/partials/base/_html-elements.scss */
 h5 {
   font-size: 1em;
   margin: 0 0 1.625em;
 }
 
-/* line 162, ../sass/partials/base/_html-elements.scss */
+/* line 185, ../sass/partials/base/_html-elements.scss */
 h6 {
   font-size: 0.875em;
   margin: 0 0 1.85714em;
 }
 
-/* line 170, ../sass/partials/base/_html-elements.scss */
+/* line 193, ../sass/partials/base/_html-elements.scss */
 hr {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
   border: 1px solid #cccccc;
+  height: 0;
   margin: 1.625em 0;
   padding-bottom: -1px;
 }
 
-/* line 176, ../sass/partials/base/_html-elements.scss */
+/* line 201, ../sass/partials/base/_html-elements.scss */
 html {
   line-height: 1.625em;
   -webkit-hyphens: auto;
@@ -656,80 +594,122 @@ html {
   hyphens: auto;
   font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
-/* line 222, ../sass/partials/base/_html-elements.scss */
+/* line 214, ../sass/partials/base/_html-elements.scss */
++ img {
+  border: 0;
+  width: auto;
+}
+
+/* line 231, ../sass/partials/base/_html-elements.scss */
+input {
+  line-height: normal;
+}
+
+/* line 263, ../sass/partials/base/_html-elements.scss */
 legend {
+  border: 0;
   margin: 0;
+  padding: 0;
 }
 
-/* line 238, ../sass/partials/base/_html-elements.scss */
+/* line 281, ../sass/partials/base/_html-elements.scss */
 mark {
   background: #ff0;
   color: #000;
 }
 
-/* line 253, ../sass/partials/base/_html-elements.scss */
+/* line 296, ../sass/partials/base/_html-elements.scss */
 ol {
   margin: 0 0 1.625em;
   padding: 0 0 0 1.5em;
 }
-/* line 257, ../sass/partials/base/_html-elements.scss */
+/* line 300, ../sass/partials/base/_html-elements.scss */
 [dir="rtl"] ol {
   padding: 0 1.5em 0 0;
 }
-/* line 262, ../sass/partials/base/_html-elements.scss */
+/* line 305, ../sass/partials/base/_html-elements.scss */
 ol ol,
 ol ul {
   margin: 0;
 }
 
-/* line 273, ../sass/partials/base/_html-elements.scss */
+/* line 310, ../sass/partials/base/_html-elements.scss */
+optgroup {
+  font-weight: bold;
+}
+
+/* line 318, ../sass/partials/base/_html-elements.scss */
 p {
   margin: 0 0 1.625em;
 }
 
-/* line 279, ../sass/partials/base/_html-elements.scss */
+/* line 324, ../sass/partials/base/_html-elements.scss */
 pre {
   margin: 0 0 1.625em;
+  overflow: auto;
 }
 
-/* line 295, ../sass/partials/base/_html-elements.scss */
+/* line 347, ../sass/partials/base/_html-elements.scss */
 small {
   font-size: 0.875em;
   line-height: 1.85714em;
 }
 
-/* line 311, ../sass/partials/base/_html-elements.scss */
+/* line 353, ../sass/partials/base/_html-elements.scss */
+sub {
+  bottom: -0.25em;
+}
+
+/* line 359, ../sass/partials/base/_html-elements.scss */
+sup {
+  top: -0.5em;
+}
+
+/* line 363, ../sass/partials/base/_html-elements.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* line 370, ../sass/partials/base/_html-elements.scss */
 td {
   vertical-align: top;
 }
 
-/* line 319, ../sass/partials/base/_html-elements.scss */
+/* line 374, ../sass/partials/base/_html-elements.scss */
+textarea {
+  overflow: auto;
+}
+
+/* line 380, ../sass/partials/base/_html-elements.scss */
 th {
   vertical-align: top;
 }
 
-/* line 331, ../sass/partials/base/_html-elements.scss */
+/* line 392, ../sass/partials/base/_html-elements.scss */
 ul {
   margin: 0 0 1.625em;
   padding: 0 0 0 1.2em;
 }
-/* line 335, ../sass/partials/base/_html-elements.scss */
+/* line 396, ../sass/partials/base/_html-elements.scss */
 [dir="rtl"] ul {
   padding: 0 1.2em 0 0;
 }
-/* line 340, ../sass/partials/base/_html-elements.scss */
+/* line 401, ../sass/partials/base/_html-elements.scss */
 ul ol,
 ul ul {
   margin: 0;
 }
 
-/* line 346, ../sass/partials/base/_html-elements.scss */
+/* line 407, ../sass/partials/base/_html-elements.scss */
 .pane__content ul {
   padding: 0;
 }
-/* line 348, ../sass/partials/base/_html-elements.scss */
+/* line 409, ../sass/partials/base/_html-elements.scss */
 .pane__content ul > li {
   list-style: none;
   list-style-position: outside;
@@ -738,7 +718,7 @@ ul ul {
   padding-left: 17px;
   position: relative;
 }
-/* line 355, ../sass/partials/base/_html-elements.scss */
+/* line 416, ../sass/partials/base/_html-elements.scss */
 .pane__content ul > li:before {
   color: #ed7d3a;
   content: "\2022\a0\a0";
@@ -748,63 +728,62 @@ ul ul {
   top: -1px;
   width: 17px;
 }
-/* line 364, ../sass/partials/base/_html-elements.scss */
+/* line 425, ../sass/partials/base/_html-elements.scss */
 .pane__content ul > li ul {
   padding: 0 0 0 1em;
 }
-/* line 366, ../sass/partials/base/_html-elements.scss */
+/* line 427, ../sass/partials/base/_html-elements.scss */
 [dir="rtl"] .pane__content ul > li ul {
   padding: 0 1em 0 0;
 }
-/* line 369, ../sass/partials/base/_html-elements.scss */
+/* line 430, ../sass/partials/base/_html-elements.scss */
 .pane__content ul > li ul > li {
   list-style: square;
   padding-left: 0;
   position: static;
 }
-/* line 373, ../sass/partials/base/_html-elements.scss */
+/* line 434, ../sass/partials/base/_html-elements.scss */
 .pane__content ul > li ul > li:before {
   content: "";
   position: static;
   width: auto;
 }
-/* line 378, ../sass/partials/base/_html-elements.scss */
+/* line 439, ../sass/partials/base/_html-elements.scss */
 .pane__content ul > li ul > li ul > li {
   list-style: disc;
 }
-/* line 380, ../sass/partials/base/_html-elements.scss */
+/* line 441, ../sass/partials/base/_html-elements.scss */
 .pane__content ul > li ul > li ul > li ul > li {
   list-style: circle;
 }
-/* line 382, ../sass/partials/base/_html-elements.scss */
+/* line 443, ../sass/partials/base/_html-elements.scss */
 .pane__content ul > li ul > li ul > li ul > li ul > li {
   list-style: square;
 }
 
 @media print {
-  /* line 399, ../sass/partials/base/_html-elements.scss */
+  /* line 460, ../sass/partials/base/_html-elements.scss */
   * {
     background: transparent !important;
     box-shadow: none !important;
     color: #000 !important;
     -ms-filter: none !important;
     filter: none !important;
-    text-shadow: none !important;
   }
 
-  /* line 411, ../sass/partials/base/_html-elements.scss */
+  /* line 471, ../sass/partials/base/_html-elements.scss */
   iframe,
   nav {
     display: none;
   }
 
-  /* line 416, ../sass/partials/base/_html-elements.scss */
+  /* line 476, ../sass/partials/base/_html-elements.scss */
   a,
   a:visited {
     text-decoration: none;
   }
 
-  /* line 420, ../sass/partials/base/_html-elements.scss */
+  /* line 480, ../sass/partials/base/_html-elements.scss */
   a[href]:after {
     content: " <" attr(href) ">";
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -813,7 +792,7 @@ ul ul {
     text-transform: lowercase;
   }
 
-  /* line 436, ../sass/partials/base/_html-elements.scss */
+  /* line 496, ../sass/partials/base/_html-elements.scss */
   a[href^="javascript:"]:after,
   a[href^="mailto:"]:after,
   a[href^="tel:"]:after,
@@ -821,36 +800,36 @@ ul ul {
     content: "";
   }
 
-  /* line 440, ../sass/partials/base/_html-elements.scss */
+  /* line 500, ../sass/partials/base/_html-elements.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
 
-  /* line 445, ../sass/partials/base/_html-elements.scss */
+  /* line 505, ../sass/partials/base/_html-elements.scss */
   blockquote,
   pre {
     border: 1px solid #999;
     page-break-inside: avoid;
   }
 
-  /* line 450, ../sass/partials/base/_html-elements.scss */
+  /* line 510, ../sass/partials/base/_html-elements.scss */
   thead {
     display: table-header-group;
   }
 
-  /* line 456, ../sass/partials/base/_html-elements.scss */
+  /* line 516, ../sass/partials/base/_html-elements.scss */
   img,
   tr,
   ul {
     page-break-inside: avoid;
   }
 
-  /* line 460, ../sass/partials/base/_html-elements.scss */
+  /* line 520, ../sass/partials/base/_html-elements.scss */
   img {
     max-width: 100% !important;
   }
 
-  /* line 469, ../sass/partials/base/_html-elements.scss */
+  /* line 529, ../sass/partials/base/_html-elements.scss */
   h1 a:after,
   h2 a:after,
   h3 a:after,
@@ -860,7 +839,7 @@ ul ul {
     display: inline-block;
   }
 
-  /* line 476, ../sass/partials/base/_html-elements.scss */
+  /* line 536, ../sass/partials/base/_html-elements.scss */
   h2,
   h3,
   h4,
@@ -869,7 +848,7 @@ ul ul {
     widows: 3;
   }
 
-  /* line 483, ../sass/partials/base/_html-elements.scss */
+  /* line 543, ../sass/partials/base/_html-elements.scss */
   h2,
   h3,
   h4 {
