--- a/public/sites/all/themes/gesso/sass/partials/base/_html-elements.scss
+++ b/public/sites/all/themes/gesso/sass/partials/base/_html-elements.scss
@@ -24,11 +24,17 @@
 }
 
 a {
+  background-color: transparent;
   color: $link-color;
   // Improves readability when focused.
   font-weight: bold;
   outline-offset: em(2px);
   text-decoration: none;
+
+  &:active,
+  &:hover {
+    outline: 0;
+  }
 
   &:hover,
   &:focus {
@@ -39,6 +45,10 @@ a {
 
 abbr {
   @include smallcaps();
+
+  &[title] {
+    border-bottom: 1px dotted;
+  }
 
   &:hover {
     cursor: help;
@@ -65,12 +75,16 @@ body {
     background-color: $gray;
   }
   color: $primary-text-color;
+  margin: 0;
+  padding: 0;
   word-wrap: break-word;
 }
 
 // Don't style button elements, since they're often styled as links for
 // accessible widgets. Use the .button class in partials/components/buttons.
-button {}
+button {
+  overflow: visible;
+}
 
 canvas {}
 
@@ -94,7 +108,9 @@ del {}
 
 details {}
 
-dfn {}
+dfn {
+  font-style: italic;
+}
 
 dl {
   margin: 0 0 rhythm(1);
@@ -110,11 +126,18 @@ fieldset {}
 
 figcaption {}
 
-figure {}
+figure {
+  margin: 0 0 rhythm(1);
+}
 
 footer {}
 
-form {}
+form {
+  @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+    // Correct margin displayed oddly in IE 6/7.
+    margin: 0;
+  }
+}
 
 %hN {
   color: $heading-text-color;
@@ -168,7 +191,9 @@ h6, %h6 {
 header {}
 
 hr {
+  @include box-sizing(content-box);
   border: 1px solid $form-border-color;
+  height: 0;
   margin: rhythm(1) 0;
   padding-bottom: -1px;
 }
@@ -178,18 +203,34 @@ html {
   @include hyphens(auto);
   font-family: $base-font-family;
   font-size: 100% * ($base-font-size / 16px);
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 i {}
 
 iframe {} 
 
-img {}
++img {
+  border: 0;
+
+  @if $legacy-support-for-ie7 {
+    // Improve image quality when scaled in IE 7.
+    -ms-interpolation-mode: bicubic;
+  }
+
+  @if $legacy-support-for-ie8 {
+    // Correct IE 8 not scaling image height when resized.
+    width: auto;
+  }
+}
 
 // Don't style button, submit, or reset elements, since they're often styled as
 // links for accessible widgets. Use the .button class in
 // partials/components/buttons.
-input {}
+input {
+  line-height: normal;
+}
 input[type="button"] {}
 input[type="checkbox"] {}
 input[type="color"] {}
@@ -220,7 +261,9 @@ kbd {}
 label {}
 
 legend {
+  border: 0;
   margin: 0;
+  padding: 0;
   @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
     *margin-left: -7px; // LTR
 
@@ -264,7 +307,9 @@ ol {
   }
 }
 
-optgroup {}
+optgroup {
+  font-weight: bold;
+}
 
 option {}
 
@@ -278,6 +323,13 @@ param {}
 
 pre {
   margin: 0 0 rhythm(1);
+  overflow: auto;
+
+  @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+    white-space: pre;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
 }
 
 progress {}
@@ -298,13 +350,20 @@ small {
 
 strong {}
 
-sub {}
+sub {
+  bottom: -0.25em;
+}
 
 summary {}
 
-sup {}
+sup {
+  top: -0.5em;
+}
 
-table {}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
 tbody {}
 
@@ -312,7 +371,9 @@ td {
   vertical-align: top;
 }
 
-textarea {}
+textarea {
+  overflow: auto;
+}
 
 tfoot {}
 
@@ -404,7 +465,6 @@ video {}
       -ms-filter: none !important;
       filter: none !important;
     }
-    text-shadow: none !important;
   }
 
   iframe,
