tweaks to mobile menu and search bar

--- a/patternlab/source/sass/partials/components/_mobile-menu.scss
+++ b/patternlab/source/sass/partials/components/_mobile-menu.scss
@@ -100,7 +100,14 @@
 
 .mobile-menu__search {
   display: none;
-  position: absolute;
-  right: 0;
-  top: em(60px);
+  padding: 0.5em;
+  form {
+    width: 100%;
+    .form-item {
+      width: 100%;
+    }
+    .form-text {
+      width: 100%;
+    }
+  }
 }
