--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_nav--mobile-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_nav--mobile-menu.scss
@@ -42,10 +42,9 @@
     [dir="rtl"] & {
       padding: 0.75em 1em 0.75em 44px;
     }
-    &.is-active {
+    &.is-open {
       background: $mobile-submenu-fallback-bg-color;
       background: $mobile-submenu-bg-color;
-      color: $mobile-menu-active-color;
     }
   }
 
@@ -59,7 +58,6 @@
     border: 0;
     @include box-shadow(none);
     display: inline-block;
-    //margin-left: 1em; // LTR
     position: absolute;
     right: 0;
     top: 0;
@@ -86,9 +84,7 @@
     margin: 0;
     padding: 0 0 1em 0;
 
-    .nav__item {
-      
-    }
+    .nav__item {}
 
     .nav__link {
       color: $mobile-submenu-text-color;
