--- a/patternlab/source/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
+++ b/patternlab/source/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
@@ -19,17 +19,12 @@
 .block--tb-megamenu-main-menu {
   //layout for main menu wrapper when in navigation region
   .region-navigation & {
-    //left: 0;
     padding-left: 0;
     @include breakpoint(1140px, $no-query: true) {
-      //left: 210px;
       padding-left: 210px;
     }
-    //position: absolute;
-    //top: 61px;
     padding-top: 61px;
     @include breakpoint(1140px, $no-query: true) {
-      //top: 0;
       padding-top: 0;
     }
     @media print {
@@ -48,7 +43,7 @@
         margin: 0;
         padding: 0;
         &.dropdown {
-          //position: relative;
+          position: static;
           > a {
             &:after {
               @include svg-background(chevron-thin-down);
@@ -143,7 +138,7 @@
           border-top: 8px solid $orange;
           @include box-shadow(0 2px 2px rgba(0,0,0,0.2));
           min-width: 300px;
-          padding: 1em;
+          padding: 2em 3em;
           .lt-ie9 & {
             border: 1px solid $gray;
           }
@@ -165,6 +160,16 @@
             border: 0;
             .tb-megamenu-column-inner {
               padding: 0;
+            }
+            .span6 {
+              padding-left: 1em;
+              &:first-child {
+                padding-left: 0;
+                padding-right: 1em;
+              }
+            }
+            [class*="span"] { 
+              min-height: 20px;
             }
           }
 
@@ -192,7 +197,10 @@
               }
             }
             .view__footer {
-              padding: 0.5em 0 0.5em 0;
+              padding: 0.5em 0 1em 0;
+              p {
+                margin: 0;
+              }
               a {
                 color: $link-color;
                 padding: 0;
@@ -218,7 +226,6 @@
           }
 
           .has-icon-discussions {
-            //background: #f8f8f8;
             .view__header h2 {
               &:before {
                 @extend %tb-megamenu-submenu-icon;
@@ -232,7 +239,10 @@
           .has-icon-sectors .view__header h2 {
             &:before {
               @extend %tb-megamenu-submenu-icon;
-              //@include svg-background(icon-discussions-26-20-orange);
+              @include svg-background(icon-sectors-20-20-orange);
+              background-size: 20px 20px;
+              height: 20px;
+              width: 20px;
             }
           }
           .has-icon-topics .view__header h2 {
