--- a/public/sites/all/themes/gesso/sass/overrides/admin_menu_toolbar.scss
+++ b/public/sites/all/themes/gesso/sass/overrides/admin_menu_toolbar.scss
@@ -4,6 +4,10 @@
 @import '../partials/global';
 
 #admin-menu {
+  a {
+    font-weight: normal;
+  }
+  
   .admin-menu-icon {
     height: 26px;
     margin: 0;
