added assistance icon to patternlab

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/01-innovation-teaser@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/01-innovation-teaser@inprogress.mustache
@@ -18,6 +18,9 @@
       <div class="view">
         <div class="has-icon--favorite" title="Favorites">6</div>
       </div>
+      <div class="view">
+        <div class="has-icon--assistance" title="Assistance">1</div>
+      </div>
     </div>
   </div>
 </article>
