some theming for comments and discussing lists

--- a/public/sites/all/themes/gesso/sass/partials/components/_comments.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_comments.scss
@@ -7,6 +7,15 @@
     display: none; // hide comment field text format info
   }
 
+  .field-widget-text-textarea .text-format-wrapper .form-item {
+    margin: rhythm(1) 0;
+  }
+
+  label {
+    display: block;
+    font-weight: bold;
+  }
+  
   .indented {
     padding-left: 2em;
     .indented {
