--- a/public/sites/all/themes/gesso/css/styles.css
+++ b/public/sites/all/themes/gesso/css/styles.css
@@ -1,4 +1,4 @@
-/* line 65, ../../../../../../../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/singularitygs-1.1.2/stylesheets/singularitygs/helpers/_clearfix.scss */
+/* line 65, ../../../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/singularitygs-1.1.2/stylesheets/singularitygs/helpers/_clearfix.scss */
 .clearfix:after, .layout-grid__row:after, .field--funding-deadline:after, .pane--homepage-views-personas-pane .pane__content .view--homepage-views:after, .pane--landing-intro:after, .quicktabs-tabs.quicktabs-style-nostyle:after, .region-footer:after, .view__header:after, .view--homepage-cardflip:after {
   content: "";
   display: table;
@@ -4646,7 +4646,7 @@ div[class*="pane--facetapi-"] .pane__content ul li a {
   box-shadow: 0 8px 8px -6px rgba(0, 0, 0, 0.15);
   display: none;
   position: relative;
-  z-index: 2;
+  z-index: 3;
 }
 @media (min-width: 54.375em) {
   /* line 1, ../sass/partials/components/_region-navigation.scss */
