--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/04-panes/_homepage-join-callout@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/04-panes/_homepage-join-callout@inprogress.mustache
@@ -1,6 +1,11 @@
 <div class="pane pane--homepage-join-callout">    
   <div class="pane__content">
     <h1>Ready to get started?</h1>
-    <p><a href="#" class="button button--highlight button--large">Join the community</a></p>
+    <p>
+      <a href="#" class="button button--highlight button--large">Join the community</a>
+    </p>
+    <p class="fineprint">
+      The partners and sponsors of the Global Innovation Exchange ("Exchange") make no warranties or representations and do not endorse, recommend, or confirm any information or statements made on this Exchange. The Exchange is an open and free market of ideas and information, and information contained on the Exchange does not necessarily reflect the views of the partners or sponsors of the Exchange. Participants and readers of the Exchange should conduct appropriate due diligence when considering information, innovations, and other resources found on the Exchange.
+    </p>
   </div>
 </div>
