--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/discussion-landing@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/discussion-landing@inprogress.mustache
@@ -23,6 +23,7 @@
               </div>
             {{/ listItems.nine }}
           </div>
+          {{> molecules-pager }}
         </div>
       </div>
     </div>
