--- a/public/sites/all/themes/gesso/css/no-mq.css
+++ b/public/sites/all/themes/gesso/css/no-mq.css
@@ -2323,13 +2323,14 @@ input.throbbing {
 /* line 1, ../sass/partials/components/_footer.scss */
 body > .footer {
   background: #f8f8f8;
+  margin-top: 1em;
 }
 
-/* line 5, ../sass/partials/components/_footer.scss */
+/* line 6, ../sass/partials/components/_footer.scss */
 .footer__menu-bar {
   background: #565a5c;
 }
-/* line 7, ../sass/partials/components/_footer.scss */
+/* line 8, ../sass/partials/components/_footer.scss */
 .footer__menu-bar a {
   color: #fff;
 }
@@ -3374,45 +3375,107 @@ header.header {
 
 /* line 4, ../sass/partials/components/_pager.scss */
 .pager {
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.15);
   clear: both;
+  font-size: 0%;
+  display: inline-block;
+  line-height: 0;
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
-/* line 10, ../sass/partials/components/_pager.scss */
+/* line 15, ../sass/partials/components/_pager.scss */
 .pager__item {
   display: inline-block;
+  color: #565a5c;
+  font-size: 16px;
   margin: 0;
-  padding: 0 0.25em 0 0;
+  padding: 0;
 }
-/* line 14, ../sass/partials/components/_pager.scss */
+/* line 21, ../sass/partials/components/_pager.scss */
 .pane__content .pager__item {
   padding-bottom: 0;
   padding-left: 0;
 }
-/* line 17, ../sass/partials/components/_pager.scss */
+/* line 24, ../sass/partials/components/_pager.scss */
 .pane__content .pager__item:before {
   display: none;
 }
 
-/* line 23, ../sass/partials/components/_pager.scss */
-.pager__link--first:before {
-  content: "|\00AB";
+/* line 30, ../sass/partials/components/_pager.scss */
+.pager__link {
+  border: 1px solid #f8f8f8;
+  color: #565a5c;
+  display: block;
+  font-size: 16px;
+  font-weight: normal;
+  height: 32px;
+  line-height: 32px;
+  padding: 0 10px;
+  text-align: center;
+  text-decoration: none;
+}
+/* line 41, ../sass/partials/components/_pager.scss */
+.pager__link:hover, .pager__link:focus {
+  border: 1px solid #dc5606;
+  background: #dc5606;
+  color: #fff;
+  text-decoration: none;
 }
 
-/* line 27, ../sass/partials/components/_pager.scss */
+/* line 49, ../sass/partials/components/_pager.scss */
+.pager__item--current {
+  background: #dc5606;
+  border: 1px solid #dc5606;
+  color: #fff;
+  font-size: 16px;
+  height: 32px;
+  line-height: 32px;
+  padding: 0 10px;
+  text-align: center;
+}
+
+/* line 64, ../sass/partials/components/_pager.scss */
+.pager__link--first:before,
+.pager__link--previous:before,
+.pager__link--next:before,
+.pager__link--last:before {
+  color: #dc5606;
+  font-size: 20px;
+  line-height: 0;
+}
+/* line 69, ../sass/partials/components/_pager.scss */
+.pager__link--first:hover:before, .pager__link--first:focus:before,
+.pager__link--previous:hover:before,
+.pager__link--previous:focus:before,
+.pager__link--next:hover:before,
+.pager__link--next:focus:before,
+.pager__link--last:hover:before,
+.pager__link--last:focus:before {
+  color: #fff;
+}
+
+/* line 75, ../sass/partials/components/_pager.scss */
+.pager__link--first:before {
+  content: "\00AB";
+}
+
+/* line 81, ../sass/partials/components/_pager.scss */
 .pager__link--previous:before {
   content: "\2039";
 }
 
-/* line 31, ../sass/partials/components/_pager.scss */
+/* line 87, ../sass/partials/components/_pager.scss */
 .pager__link--next:before {
   content: "\203A";
 }
 
-/* line 35, ../sass/partials/components/_pager.scss */
+/* line 93, ../sass/partials/components/_pager.scss */
 .pager__link--last:before {
-  content: "\00BB|";
+  content: "\00BB";
 }
 
 /* line 1, ../sass/partials/components/_pane.scss */
