--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.mustache
@@ -23,6 +23,7 @@
               &lt;/div&gt;
             {{/ listItems.nine }}
           &lt;/div&gt;
+          {{&gt; molecules-pager }}
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
