--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-landing/03-templates-innovation-landing.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-landing/03-templates-innovation-landing.mustache
@@ -48,6 +48,8 @@
             {{/ listItems.three }}
           &lt;/div&gt;
 
+          {{&gt; molecules-pager }}
+
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
