--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/innovation-landing@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/innovation-landing@inprogress.mustache
@@ -48,6 +48,8 @@
             {{/ listItems.three }}
           </div>
 
+          {{> molecules-pager }}
+
         </div>
       </div>
     </div>
