--- a/public/sites/all/themes/gesso/sass/partials/components/_pager.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_pager.scss
@@ -2,15 +2,22 @@
 // Styles for pagers.
 
 .pager {
+  @include box-shadow(1px 1px 1px 1px rgba(0,0,0,0.15));
   clear: both;
+  font-size: 0%;
+  display: inline-block;
+  line-height: 0;
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
 .pager__item {
   display: inline-block;
+  color: $primary-text-color;
+  font-size: $font-size-normal;
   margin: 0;
-  padding: 0 0.25em 0 0;
+  padding: 0;
   .pane__content & { // undo bullet from _html-elements
     padding-bottom: 0;
     padding-left: 0;
@@ -20,18 +27,70 @@
   }
 }
 
-.pager__link--first:before {
-  content: "|\00AB";
+.pager__link {
+  border: 1px solid #f8f8f8;
+  color: $primary-text-color;
+  display: block;
+  font-size: 16px;
+  font-weight: normal;
+  height: 32px;
+  line-height: 32px;
+  padding: 0 10px;
+  text-align: center;
+  text-decoration: none;
+  &:hover, &:focus {  
+    border: 1px solid $orange;
+    background: $orange;
+    color: #fff;
+    text-decoration: none;
+  }
 }
 
-.pager__link--previous:before {
-  content: "\2039";
+.pager__item--current {
+  background: $orange;
+  border: 1px solid $orange;
+  color: #fff;
+  font-size: 16px;
+  height: 32px;
+  line-height: 32px;
+  padding: 0 10px;
+  text-align: center;
 }
 
-.pager__link--next:before {
-  content: "\203A";
+.pager__link--first,
+.pager__link--previous,
+.pager__link--next,
+.pager__link--last {
+  &:before {
+    color: $orange;
+    font-size: 20px;
+    line-height: 0;
+  }
+  &:hover:before, &:focus:before {
+    color: #fff;
+  }
 }
 
-.pager__link--last:before {
-  content: "\00BB|";
+.pager__link--first {
+  &:before {
+    content: "\00AB";
+  }
+}
+
+.pager__link--previous {
+  &:before {
+    content: "\2039";
+  }
+}
+
+.pager__link--next {
+  &:before {
+    content: "\203A";
+  }
+}
+
+.pager__link--last {
+  &:before {
+    content: "\00BB";
+  }
 }
