--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/discussion-landing@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/discussion-landing@inprogress.mustache
@@ -16,14 +16,18 @@
           {{> molecules-filters }}
         </aside>
         <div class="l-main">
-          <div class="view view--discussion-listing">
-            {{# listItems.nine }}
-              <div class="views-row">
-                {{> organisms-discussion-teaser }}
+          <div class="pane">
+            <div class="pane__content">
+              <div class="view view--discussion-listing">
+                {{# listItems.nine }}
+                  <div class="views-row">
+                    {{> organisms-discussion-teaser }}
+                  </div>
+                {{/ listItems.nine }}
+                {{> molecules-pager }}
               </div>
-            {{/ listItems.nine }}
+            </div>
           </div>
-          {{> molecules-pager }}
         </div>
       </div>
     </div>
