--- a/public/sites/all/themes/gesso/sass/partials/components/_pager.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_pager.scss
@@ -8,7 +8,7 @@
   display: inline-block;
   line-height: 0;
   list-style: none;
-  margin: 0;
+  margin: 10px 0;
   padding: 0;
 }
 
@@ -53,7 +53,7 @@
   font-size: 16px;
   height: 32px;
   line-height: 32px;
-  padding: 0 10px;
+  padding: 0 10px !important;
   text-align: center;
 }
 
