--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/event-teaser@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/event-teaser@inprogress.mustache
@@ -1,7 +1,7 @@
 <article class="card">
   <div class="card__content">
     <h2 class="card__date">September 21</h2>
-    <h3 class="card__title"><a href="{{ url }}">{{ title }}</a></h3>
+    <h3 class="card__primary-title"><a href="{{ url }}">{{ title }}</a></h3>
     <div class="card__meta">
       <div class="card__list">
         <div class="card__list-label">Location:</div> United States
