--- a/public/sites/all/themes/gesso/sass/partials/global/extendables/_button.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/extendables/_button.scss
@@ -6,10 +6,11 @@
   @include border-radius(0);
   background-color: $bg-color;
   border: 1px solid $bg-color;
-  color: $button-text-color;
+  color: $button-text-color !important;
   cursor: pointer;
   display: inline-block;
-  font-family: $font-family;
+  font-family: $base-font-family;
+  font-weight: normal;
   margin: 0 0 rhythm(1);
   padding: 0.5em 1.75em;
   text-align: center;
@@ -25,7 +26,7 @@
   &:hover {
     background-color: darken($bg-color, 6.9%);
     border-color: darken($bg-color, 6.9%);
-    color: $button-text-color;
+    color: $button-text-color !important;
     outline: 0;
     text-decoration: none;
   }
@@ -61,17 +62,17 @@
 %button--light {
   background-color: #fff;
   border: 1px solid $primary-text-color;
-  color: $primary-text-color;
+  color: $primary-text-color !important;
   &:hover, &:focus {
     background-color: $primary-text-color;
-    color: #fff;
+    color: #fff !important;
   }
 }
 
 %button--white {
   background: #fff;
   border: 0;
-  color: $orange;
+  color: $orange !important;
   margin-bottom: 0;
   opacity: 0.75;
   text-transform: uppercase;
